# dfki-quad

./: .gitignore  .gitmodules  README.md  automatic_solver_experiments.sh  run_docker.sh
docker/: Dockerfile  (+1 more)
ws/src/common/: CMakeLists.txt  package.xml
ws/src/common/config/: common_config_go2.yaml  common_config_ulab.yaml
ws/src/common/include/common/: constants.hpp  feet_targets.hpp  joint_commands.hpp  model_interface.hpp  quad_model_pino.hpp  quad_model_symbolic.hpp  quad_state.hpp  state_interface.hpp
ws/src/common/launch/: hardware.launch.py  simulation.launch.py
ws/src/common/model/urdf/: quad.urdf
ws/src/common/model/urdf/go2/: CMakeLists.txt
ws/src/common/src/: quad_model.cpp  quad_model_pino.cpp  quad_model_symbolic.cpp  quad_state.cpp
ws/src/common/src/tests/: model_test.cpp
ws/src/controllers/: CMakeLists.txt  package.xml
ws/src/controllers/config/: mit_controller_real_go2.yaml  mit_controller_real_ulab.yaml  mit_controller_sim_go2.yaml  mit_controller_sim_ulab.yaml
ws/src/controllers/include/: mit_controller_node.hpp
ws/src/controllers/include/mit_controller/: gait.hpp  gait_sequencer_interface.hpp  inverse_dynamics.hpp  mit_controller_params.hpp  mpc.hpp  mpc_interface.hpp  mpc_trajectory_planner.hpp  raibert_foot_step_planner.hpp  swing_leg_controller_interface.hpp  wbc_arc_opt.hpp  wbc_interface.hpp
ws/src/controllers/include/model_adaptation/: least_squares_model_adaptation.hpp  model_adaptation_interface.hpp
ws/src/controllers/include/potato_sim/: potato_model.hpp
ws/src/controllers/launch/: leg_sys_id.launch.py  mit_controller.launch.py  quad_stand_up.launch.py  trajectory_replay.launch.py
ws/src/controllers/src/: mit_controller_node.cpp  mit_controller_parameters.yaml  trajectory_replay.cpp
ws/src/controllers/src/mit_controller/: gait.cpp  inverse_dynamics.cpp  mit_controller.cpp  mpc.cpp  mpc_trajectory_planner.cpp  raibert_foot_step_planner.cpp  swing_leg_controller.cpp  wbc_arc_opt.cpp
ws/src/controllers/src/model_adaptation/: kf_model_adaptation.cpp  least_squares_model_adaptation.cpp
ws/src/controllers/src/potato_sim/: potato_model.cpp  potato_sim.cpp
ws/src/controllers/src/system_identification/: SysIDLegControllerNode.cpp  SysIDTrajectory.cpp
ws/src/controllers/src/tools/: plotting.cpp
ws/src/controllers/tests/: testSwingTrajectoryControllerNode.cpp
ws/src/drivers/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  package.xml
ws/src/drivers/ament_cmake_package_templates/: templates.cmake
ws/src/drivers/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
ws/src/drivers/include/drivers/: leg_driver.hpp
ws/src/drivers/launch/: leg_driver_launch.py
ws/src/drivers/src/: leg_driver.cpp  unitree_ros2_motor_driver.cpp
ws/src/gait_controller/: CMakeLists.txt  README.md  package.xml
ws/src/gait_controller/include/gait_controller/: adaptive_gait_sequencer.hpp  bio_gait_sequencer.hpp  gait.hpp  gait_reference_trajectory_planner.hpp  gait_sequence.hpp  gait_sequence_to_msg.hpp  gait_sequencer_interface.hpp  raibert_foot_step_planner.hpp  simple_gait_sequencer.hpp
ws/src/gait_controller/src/gait_controller/: adaptive_gait_sequencer.cpp  bio_gait_sequencer.cpp  gait.cpp  gait_reference_trajectory_planner.cpp  raibert_foot_step_planner.cpp  simple_gait_sequencer.cpp
ws/src/go2_description/: CMakeLists.txt  README.md  package.xml
ws/src/go2_description/urdf/: go2_description.urdf
ws/src/quad_model_adaptation/: CMakeLists.txt  package.xml
ws/src/quad_model_adaptation/include/quad_model_adaptation/: kf_model_adaptation.hpp  model_adaptation_interface.hpp
ws/src/quad_model_adaptation/src/quad_model_adaptation/: kf_model_adaptation.cpp  least_squares_model_adaptation.cpp
ws/src/quad_ros2_control/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
ws/src/quad_ros2_control/config/: controller_manager_go2.yaml  forward_position_test_go2.yaml  robot_models.yaml
ws/src/quad_ros2_control/launch/: topic_based_control.launch.py
ws/src/quad_ros2_control/scripts/: test_topic_based_forward_controller.py
ws/src/quad_ros2_control/urdf/: go2_topic_based.ros2_control.xacro  quad_topic_based_system.ros2_control.xacro
ws/src/quad_tools/: CMakeLists.txt  package.xml
ws/src/quad_tools/include/quad_tools/: plot_gs.hpp
ws/src/quad_tools/src/: SysIDLegControllerNode.cpp  SysIDTrajectory.cpp  log_cpu_power.cpp  plot_gs.cpp  plotting.cpp  trajectory_replay.cpp
ws/src/quad_wbc/: CMakeLists.txt  README.md  package.xml
ws/src/quad_wbc/cmake/: quad_wbc-extras.cmake
ws/src/quad_wbc/include/quad_wbc/: inverse_dynamics.hpp  wbc_arc_opt.hpp  wbc_interface.hpp
ws/src/quad_wbc/src/quad_wbc/: inverse_dynamics.cpp  wbc_arc_opt.cpp
ws/src/quad_wbc/test/: test_inverse_dynamics.cpp
ws/src/simulator/: CMakeLists.txt  package.xml
ws/src/simulator/config/: simulator_params_go2.yaml  simulator_params_ulab.yaml  visualizer_params_go2.yaml
ws/src/simulator/include/: drake_simulator.hpp
ws/src/simulator/launch/: simulator.launch.py  visualizer.launch.py
ws/src/simulator/src/: drake_simulator.cpp  drake_visualizer.cpp
ws/src/simulator/src/drake_vizualisers/: poses_vizualiser.cpp  positions_vizualiser.cpp
ws/src/state_estimation/: CMakeLists.txt  README.md  package.xml
ws/src/state_estimation/include/: contact_detection.hpp  kalman_filter.hpp  state_estimation_node.hpp
ws/src/state_estimation/launch/: state_estimation.launch.py
ws/src/state_estimation/src/: kalman_filter.cpp  state_estimation_node.cpp
ws/src/wbc/: CMakeLists.txt  README.md  manifest.xml  package.xml
ws/src/wbc/cmake/: qpOASES.pc.in
ws/src/wbc/docker/: install.sh
ws/src/wbc/scripts/: full_install.sh
ws/src/wbc/src/constraints/: CMakeLists.txt
ws/src/wbc/src/controllers/: CMakeLists.txt
ws/src/wbc/src/core/: CMakeLists.txt  QPSolver.cpp
ws/src/wbc/src/robot_models/hyrodyn/: CMakeLists.txt
ws/src/wbc/src/robot_models/pinocchio/: CMakeLists.txt
ws/src/wbc/src/robot_models/rbdl/: CMakeLists.txt
ws/src/wbc/src/scenes/acceleration_reduced_tsid/: CMakeLists.txt
ws/src/wbc/src/tools/: CMakeLists.txt
(+43 files in other folders)
